<resources>
    <string name="app_name">Loft</string>
    <string name="home_fragment_label">home_fragment_label</string>
    <string name="start_fragment_label">start_fragment_label</string>
    <string name="login_fragment_label">login_fragment_label</string>
    <string name="sign_up_fragment_label">sign_up_fragment_label</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header_primary_label">Select an image</string>
    <string name="header_secondary_label">to know more</string>
    <string name="select_button_label">Select</string>
    <string name="select_new_button_label">Select New</string>
    <string name="selected_image_label">Selected image</string>
    <string name="reset_button_label">Reset</string>
    <string name="app_title">Loft</string>
    <string name="welcome_label">Welcome</string>
    <string name="login_screen_message">Please login to continue …</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password_label">forgot password?</string>
    <string name="sign_in_button_label">Sign In</string>
    <string name="new_user_message">"New user? please "</string>
    <string name="register_label"><![CDATA[register ->]]></string>
    <string name="dismiss_snack_bar_label">"OK"</string>
    <string name="sign_up_welcome">Let\'s</string>
    <string name="sign_up_message">Begin our journey …</string>
    <string name="retype_password_hint">Retype password</string>
    <string name="sign_up_button_label">Sign Up</string>
</resources>
