<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context=".fragments.LoginFragment"
    android:focusable="true">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/welcome_label"
        android:textColor="@color/result_label"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/user_text_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/login_screen_message"
        android:textColor="@color/result_percentage"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/user_text_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="@+id/welcome"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        app:layout_constraintVertical_bias="0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/username_hint"
        app:hintTextColor="@color/green_dark"
        app:layout_constraintBottom_toTopOf="@+id/password_text_field"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/green_dark"
            app:hintTextColor="@color/green_dark" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/password_hint"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/green_dark"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/user_text_field">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/green_dark"
            app:hintTextColor="@color/green_dark" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forgot_password_label"
        android:textColor="@color/green_dark"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="@+id/password_text_field"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="@+id/password_text_field"
        app:layout_constraintTop_toBottomOf="@+id/password_text_field"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:text="@string/sign_in_button_label"
        android:textAllCaps="false"
        android:textColor="@color/green_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_text_field" />

    <TextView
        android:id="@+id/new_user_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user_message"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/register_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/register_label"
        android:textColor="@color/green_dark"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/new_user_message"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.025" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="-100dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/result_label"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>