<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <TextView
        android:id="@+id/header_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:paddingStart="30dp"
        android:paddingTop="25dp"
        android:paddingEnd="30dp"
        android:text="@string/header_primary_label"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/header_secondary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/header_secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/header_secondary_label"
        android:textColor="@color/green_dark"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_primary"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/selected_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/selected_image_label"
        app:layout_constraintBottom_toTopOf="@+id/select_button"
        app:layout_constraintTop_toBottomOf="@+id/header_secondary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/reset_button_background"
        android:fontFamily="sans-serif"
        android:text="@string/reset_button_label"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/select_button"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="@+id/header_primary"
        app:layout_constraintTop_toTopOf="@+id/select_button"
        app:layout_constraintVertical_bias="0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/select_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green_dark"
        android:fontFamily="sans-serif"
        android:text="@string/select_button_label"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/header_primary"
        app:layout_constraintTop_toBottomOf="@+id/header_secondary"
        app:layout_constraintVertical_bias="0.3" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/result_block"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:visibility="gone"
        app:cardCornerRadius="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_button">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/detection1_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="Item1 it is"
                android:textColor="#FFBF00"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/detection2_label"
                app:layout_constraintEnd_toStartOf="@+id/detection1_percentage"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/detection1_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="90%"
                android:textColor="@color/result_percentage"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/detection2_percentage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/detection1_label"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/detection2_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="Item1 jsbdkhfhs it is"
                android:textColor="#FFBF00"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/detection3_label"
                app:layout_constraintEnd_toStartOf="@+id/detection2_percentage"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detection1_label" />

            <TextView
                android:id="@+id/detection2_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="90%"
                android:textColor="@color/result_percentage"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/detection3_percentage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/detection2_label"
                app:layout_constraintTop_toBottomOf="@+id/detection1_percentage" />

            <TextView
                android:id="@+id/detection3_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="Item1 it is"
                android:textColor="#FFBF00"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/detection3_percentage"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detection2_label" />

            <TextView
                android:id="@+id/detection3_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="90%"
                android:textColor="@color/result_percentage"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/detection3_label"
                app:layout_constraintTop_toBottomOf="@+id/detection2_percentage" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>